<!--
  ~ MamaPlanner
  ~ Copyright (C) 2019 Domjos
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">MamaPlanner</string>

    <string name="app_event">Event</string>
    <string name="app_event_name" translatable="false">Name</string>
    <string name="app_event_description">Description</string>
    <string name="app_event_date">Date</string>
    <string name="app_event_whole_day">Whole day</string>

    <string name="app_navigation_view">View</string>
    <string name="app_navigation_view_calendar">Month</string>
    <string name="app_navigation_view_day">Day</string>


    <string name="app_settings_format">Format</string>
    <string name="app_settings_format_date">Date-Format</string>
    <string name="app_settings_format_date_summary">Enter the Date-Format you want to choose!</string>
    <string name="app_settings_format_date_default">yyyy-MM-dd</string>
    <string name="app_settings_format_time">Time-Format</string>
    <string name="app_settings_format_time_summary">Enter the Time-Format you want to choose!</string>
    <string name="app_settings_format_time_default" translatable="false">HH:mm:dd</string>

    <string name="notifications">Notifications</string>
    <string name="notifications_months">Month</string>
    <string name="notifications_days">Days</string>
    <string name="notifications_hours">Hours</string>

    <string name="app_todo">ToDo</string>
    <string name="app_todo_list">ToDo-List</string>
    <string name="app_todo_list_title">Title</string>
    <string name="app_todo_list_description">Description</string>
    <string name="app_todo_list_deadline">Deadline</string>
    <string name="app_todo_list_category">Category</string>

    <string name="app_family">Family-Member</string>
    <string name="app_family_all">All Family-Member</string>
    <string name="app_family_firstName">First-Name</string>
    <string name="app_family_lastName">Last-Name</string>
    <string name="app_family_alias">Alias</string>
    <string name="app_family_birthDate">Birth-Date</string>
    <string name="app_family_gender">Gender</string>
    <string name="app_family_color">Color</string>
    <string-array name="app_family_gender_items">
        <item>Male</item>
        <item>Female</item>
        <item>Divers</item>
    </string-array>
    <string name="app_family_picture">Picture</string>

    <string name="app_sync">Synchronisation</string>
    <string name="app_sync_type">Type</string>
    <string-array name="app_sync_types">
        <item>Google</item>
        <item>Yahoo</item>
        <item>Custom</item>
    </string-array>
    <string name="app_sync_host">Server-URL</string>
    <string name="app_sync_base">Basic</string>
    <string name="app_sync_user">User-Name</string>
    <string name="app_sync_pwd">Password</string>
    <string name="app_sync_success">Connection successfully!</string>
    <string name="app_sync_no_success">Connection not successfully!</string>

    <string name="events_examinations">Screening tests</string>
    <string name="events_vaccinations">Vaccinations of %s</string>
    <string name="events_vaccinations_1">1. Vaccinations of %s</string>
    <string name="events_vaccinations_2">2. Vaccinations of %s</string>
    <string name="events_vaccinations_3">3. Vaccinations of %s</string>
    <string name="events_vaccinations_4">4. Vaccinations of %s</string>
    <string name="events_vaccinations_5">5. Vaccinations of %s</string>
    <string name="events_vaccinations_6">6. Vaccinations of %s</string>

    <string name="app_menu_settings">Settings</string>

    <string name="sys_add">Add</string>
    <string name="sys_edit">Edit</string>
    <string name="sys_cancel">Cancel</string>
    <string name="sys_save">Save</string>

    <string name="validator_empty" formatted="false">Field \'%s\' is a required field!</string>
    <string name="validator_matches" formatted="false">Field \'%s\' contains invalid characters!</string>
    <string name="validator_noDate" formatted="false">Field \'%s\' does not contain a valid date!</string>
    <string name="validator_no_success">Fields are not valid!</string>
    <string name="main_family_color">…</string>
</resources>
