<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MamaPlanner
  ~ Copyright (C) 2019 Domjos
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navSysAdd"
        android:title="@string/sys_add"
        android:icon="@drawable/sys_add"/>
    <item
        android:id="@+id/navSysEdit"
        android:title="@string/sys_edit"
        android:icon="@drawable/sys_edit"/>
    <item
        android:id="@+id/navSysCancel"
        android:title="@string/sys_cancel"
        android:icon="@drawable/sys_cancel"/>
    <item
        android:id="@+id/navSysSave"
        android:title="@string/sys_save"
        android:icon="@drawable/sys_save"/>
</menu>