<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.SyncActivity"
    android:background="@color/colorAccent">

    <TableLayout
        android:id="@+id/tblControls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:weightSum="10">
        <TableRow>
            <TextView
                android:text="@string/app_sync_type"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:layout_width="0dp"/>
            <Spinner
                android:id="@+id/spAppSyncType"
                android:entries="@array/app_sync_types"
                android:layout_weight="7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow
            android:id="@+id/rowCustom">
            <EditText
                android:id="@+id/txtAppSyncHost"
                android:hint="@string/app_sync_host"
                android:inputType="textUri"
                android:layout_weight="7"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:autofillHints="@string/app_sync"
                tools:targetApi="o" />
            <EditText
                android:id="@+id/txtAppSyncBasic"
                android:hint="@string/app_sync_base"
                android:inputType="textUri"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:autofillHints="@string/app_sync"
                tools:targetApi="o"/>
        </TableRow>
        <TableRow>
            <EditText
                android:id="@+id/txtAppSyncUser"
                android:hint="@string/app_sync_user"
                android:inputType="text"
                android:layout_weight="5"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:autofillHints="@string/app_sync"
                tools:targetApi="o" />
            <EditText
                android:id="@+id/txtAppSyncPassword"
                android:hint="@string/app_sync_pwd"
                android:inputType="textPassword"
                android:layout_weight="5"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:autofillHints="@string/app_sync"
                tools:targetApi="o"/>
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/lblAppSyncLog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tblControls"
        android:layout_above="@+id/cmdAppSyncSave"/>

    <ImageButton
        android:id="@+id/cmdAppSyncSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/sys_save"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/app_sync"
        android:background="@android:drawable/bottom_bar"/>
</RelativeLayout>