<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FamilyActivity">

    <de.domjos.customwidgets.widgets.swiperefreshlist.SwipeRefreshDeleteList
        android:id="@+id/lvFamily"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_above="@+id/tblControls"
        android:layout_alignParentTop="true"/>

    <ScrollView
        android:id="@+id/tblControls"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_above="@+id/navigation">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10">
            <TableRow>
                <EditText
                    android:id="@+id/txtFamilyFirstName"
                    android:hint="@string/app_family_firstName"
                    android:inputType="textPersonName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"/>
                <EditText
                    android:id="@+id/txtFamilyLastName"
                    android:hint="@string/app_family_lastName"
                    android:inputType="textPersonName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"/>
            </TableRow>
            <TableRow>
                <EditText
                    android:id="@+id/txtFamilyBirthDate"
                    android:hint="@string/app_family_birthDate"
                    android:inputType="date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"/>
                <Spinner
                    android:id="@+id/spFamilyGender"
                    android:hint="@string/app_family_gender"
                    android:inputType="textPersonName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:entries="@array/app_family_gender_items"/>
            </TableRow>
            <TextView
                android:id="@+id/lblFamilyColor"
                android:hint="@string/app_family_color"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"/>
            <TableRow>
                <ImageButton
                    android:id="@+id/cmdFamilyProfileGallery"
                    app:srcCompat="@drawable/sys_gallery"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"/>
                <ImageButton
                    android:id="@+id/cmdFamilyProfileCamera"
                    app:srcCompat="@drawable/sys_camera"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"/>
            </TableRow>
        </TableLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/navigation_sys"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>