<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MamaPlanner
  ~ Copyright (C) 2019 Domjos
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.ToDoActivity">

    <TabHost
         android:id="@android:id/tabhost"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
        android:layout_above="@+id/navigation">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="-4dp"
                    android:layout_weight="0"
                    android:background="@color/colorAccent"/>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark">
                <ScrollView
                        android:id="@+id/tab1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                        <EditText
                            android:id="@+id/txtToDoTitle"
                            android:hint="@string/app_todo_list_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"/>
                        <EditText
                            android:id="@+id/txtToDoCategory"
                            android:hint="@string/app_todo_list_category"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"/>
                        <EditText
                            android:id="@+id/txtToDoDeadline"
                            android:hint="@string/app_todo_list_deadline"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="date"/>
                        <EditText
                            android:id="@+id/txtToDoDescription"
                            android:hint="@string/app_todo_list_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textMultiLine"/>
                    </LinearLayout>
                </ScrollView>

                <ScrollView
                        android:id="@+id/tab2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <TableLayout
                        android:id="@+id/tblControls"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="20"/>
                </ScrollView>

                <ScrollView
                        android:id="@+id/tab3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <TableLayout
                        android:id="@+id/tblNotifications"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="3"
                        android:orientation="vertical">
                        <TableRow>
                            <EditText
                                    android:hint="@string/notifications_months"
                                    android:inputType="numberSigned"
                                    android:layout_weight="1"/>
                            <EditText
                                    android:hint="@string/notifications_days"
                                    android:inputType="numberSigned"
                                    android:layout_weight="1"/>
                            <EditText
                                    android:hint="@string/notifications_hours"
                                    android:inputType="numberSigned"
                                    android:layout_weight="1"/>
                        </TableRow>
                        <TableRow>
                            <EditText
                                    android:hint="@string/notifications_months"
                                    android:inputType="numberSigned"
                                    android:layout_weight="1"/>
                            <EditText
                                    android:hint="@string/notifications_days"
                                    android:inputType="numberSigned"
                                    android:layout_weight="1"/>
                            <EditText
                                    android:hint="@string/notifications_hours"
                                    android:inputType="numberSigned"
                                    android:layout_weight="1"/>
                        </TableRow>
                        <TableRow>
                            <EditText
                                    android:hint="@string/notifications_months"
                                    android:inputType="numberSigned"
                                    android:layout_weight="1"/>
                            <EditText
                                    android:hint="@string/notifications_days"
                                    android:inputType="numberSigned"
                                    android:layout_weight="1"/>
                            <EditText
                                    android:hint="@string/notifications_hours"
                                    android:inputType="numberSigned"
                                    android:layout_weight="1"/>
                        </TableRow>
                        <TableRow>
                            <EditText
                                    android:hint="@string/notifications_months"
                                    android:inputType="numberSigned"
                                    android:layout_weight="1"/>
                            <EditText
                                    android:hint="@string/notifications_days"
                                    android:inputType="numberSigned"
                                    android:layout_weight="1"/>
                            <EditText
                                    android:hint="@string/notifications_hours"
                                    android:inputType="numberSigned"
                                    android:layout_weight="1"/>
                        </TableRow>
                        <TableRow>
                            <EditText
                                    android:hint="@string/notifications_months"
                                    android:inputType="numberSigned"
                                    android:layout_weight="1"/>
                            <EditText
                                    android:hint="@string/notifications_days"
                                    android:inputType="numberSigned"
                                    android:layout_weight="1"/>
                            <EditText
                                    android:hint="@string/notifications_hours"
                                    android:inputType="numberSigned"
                                    android:layout_weight="1"/>
                        </TableRow>
                        <TableRow>
                            <EditText
                                    android:hint="@string/notifications_months"
                                    android:inputType="numberSigned"
                                    android:layout_weight="1"/>
                            <EditText
                                    android:hint="@string/notifications_days"
                                    android:inputType="numberSigned"
                                    android:layout_weight="1"/>
                            <EditText
                                    android:hint="@string/notifications_hours"
                                    android:inputType="numberSigned"
                                    android:layout_weight="1"/>
                        </TableRow>
                        <TableRow>
                            <EditText
                                    android:hint="@string/notifications_months"
                                    android:inputType="numberSigned"
                                    android:layout_weight="1"/>
                            <EditText
                                    android:hint="@string/notifications_days"
                                    android:inputType="numberSigned"
                                    android:layout_weight="1"/>
                            <EditText
                                    android:hint="@string/notifications_hours"
                                    android:inputType="numberSigned"
                                    android:layout_weight="1"/>
                        </TableRow>
                        <TableRow>
                            <EditText
                                    android:hint="@string/notifications_months"
                                    android:inputType="numberSigned"
                                    android:layout_weight="1"/>
                            <EditText
                                    android:hint="@string/notifications_days"
                                    android:inputType="numberSigned"
                                    android:layout_weight="1"/>
                            <EditText
                                    android:hint="@string/notifications_hours"
                                    android:inputType="numberSigned"
                                    android:layout_weight="1"/>
                        </TableRow>
                        <TableRow>
                            <EditText
                                    android:hint="@string/notifications_months"
                                    android:inputType="numberSigned"
                                    android:layout_weight="1"/>
                            <EditText
                                    android:hint="@string/notifications_days"
                                    android:inputType="numberSigned"
                                    android:layout_weight="1"/>
                            <EditText
                                    android:hint="@string/notifications_hours"
                                    android:inputType="numberSigned"
                                    android:layout_weight="1"/>
                        </TableRow>
                        <TableRow>
                            <EditText
                                    android:hint="@string/notifications_months"
                                    android:inputType="numberSigned"
                                    android:layout_weight="1"/>
                            <EditText
                                    android:hint="@string/notifications_days"
                                    android:inputType="numberSigned"
                                    android:layout_weight="1"/>
                            <EditText
                                    android:hint="@string/notifications_hours"
                                    android:inputType="numberSigned"
                                    android:layout_weight="1"/>
                        </TableRow>
                    </TableLayout>
                </ScrollView>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/navigation_sys"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>